server/tests/contracts/snapshots/contracts_tests__contracts__payment_contracts__payment_status_active.snap
---
source: tests/contracts/payment_contracts.rs
assertion_line: 147
expression: "PaymentStatus::Active"
---
"active"
