server/tests/contracts/snapshots/contracts_tests__contracts__payment_contracts__payment_status_cancelled.snap
---
source: tests/contracts/payment_contracts.rs
assertion_line: 148
expression: "PaymentStatus::Cancelled"
---
"cancelled"
