server/tests/contracts/snapshots/contracts_tests__contracts__payment_contracts__payment_status_expired.snap
---
source: tests/contracts/payment_contracts.rs
expression: "PaymentStatus::Expired"
---
"expired"
