server/tests/contracts/snapshots/contracts_tests__contracts__payment_contracts__payment_status_pending.snap
---
source: tests/contracts/payment_contracts.rs
assertion_line: 146
expression: "PaymentStatus::Pending"
---
"pending"
