server/tests/contracts/snapshots/contracts_tests__contracts__payment_contracts__payment_type_one_time.snap
---
source: tests/contracts/payment_contracts.rs
assertion_line: 157
expression: "PaymentType::OneTime"
---
"one_time"
