server/tests/contracts/snapshots/contracts_tests__contracts__payment_contracts__payment_type_subscription.snap
---
source: tests/contracts/payment_contracts.rs
assertion_line: 156
expression: "PaymentType::Subscription"
---
"subscription"
