server/tests/contracts/snapshots/contracts_tests__contracts__payment_contracts__user_payment_status_cancelled.snap
---
source: tests/contracts/payment_contracts.rs
assertion_line: 116
expression: response
---
{
  "has_active_payment": false,
  "payment_status": "cancelled",
  "payment_type": "subscription",
  "subscription_end_date": "2025-01-15T12:00:00Z"
}
