server/tests/contracts/snapshots/contracts_tests__contracts__payment_contracts__user_payment_status_expired.snap
---
source: tests/contracts/payment_contracts.rs
assertion_line: 128
expression: response
---
{
  "has_active_payment": false,
  "payment_status": "expired",
  "payment_type": "subscription",
  "subscription_end_date": null
}
