server/tests/contracts/snapshots/contracts_tests__contracts__payment_contracts__user_payment_status_no_payment.snap
---
source: tests/contracts/payment_contracts.rs
assertion_line: 68
expression: response
---
{
  "has_active_payment": false,
  "payment_status": null,
  "payment_type": null,
  "subscription_end_date": null
}
